Replace streaming services with cache-based sequential subscriptions
- Add RocksDB-backed BlockchainCache with pruning and wait semantics
- Introduce BlockchainIngestor with ordered commit and S3 archiving
- Replace BlockSubscription/LogSubscription with
  SequentialBlockSubscription/SequentialLogSubscription
- Add Prometheus metrics for ingestion, cache, archive, and
  subscriptions
- Switch runtime image to glibc-based JRE for RocksDB JNI compatibility
- Add metrics endpoint on port 9091
- Remove old BlocksService and LogsService implementations
- Update notebook to reflect new schema fields (timestamp,
  transactionStatus)